syntax = "proto3";
package ibc.localhost;

import "google/protobuf/timestamp.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/cosmos/cosmos-sdk/x/ibc/09-localhost/types";

// MsgCreateClient defines a message to create a localhost client state
message MsgCreateClient {
  option (gogoproto.goproto_getters) = false;

  bytes signer = 1
      [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
}

// ClientState defines a loopback (localhost) client. It requires (read-only)
// access to keys outside the client prefix.
message ClientState {
  option (gogoproto.goproto_getters) = false;
  // client id
  string id = 1;
  // self chain ID
  string chain_id = 2 [
    (gogoproto.moretags) = "yaml:\"chain_id\""
  ];
  // self latest block height
  uint64 height = 3;

  // Latest timestamp when the client was update to
   google.protobuf.Timestamp  latest_timestamp = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.moretags) = "yaml:\"latest_timestamp\""
  ];
}
